<resources>
    <string name="app_name">DampBiksen.dk</string>
    <string name="app_name_end">Community</string>

    <!--UI- Title Items -->
    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>

    <string name="title_app_bar_news">Aktuelle Nyheder</string>
    <string name="title_app_bar_polls">Ugens Afstemning</string>
    <string name="title_app_bar_discount">Loyalitetsfordele</string>
    <string name="title_app_bar_contact">Startside / Kontakt</string>

    <!--UI- Alert Items -->
    <string name="error_password">Password must contain at least 8 characters.</string>

    <!--UI- Descriptions Items -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="poll_description">I denne måned har vi endnu seks nye produkter i kikkerten, vigtigst af alt er dog
    hvad i som kunder har kig på. Derfor gør vi det nu muligt for jer at deltage i valget, igennem vores nye  app. Stem på det produkt
    i helst ser komme til Dampbiksen.dk - og vær med i lodtrækningen om: 1 stk. af det vindende produkt.</string>
    <string name="disc_description">Her finder i løbende diverse rabater der kan benyttes via webshoppen. Prop den gældende vare i
    kurven, indtast den udleverede rabatkode, og spar penge. Dette er vores måde at give lidt tilbage, til vores dejlige kunder
    rundt i det danske land.</string>

    <!--UI- Button Items -->
    <string name="sign_out">Sign Out</string>
    <string name="button_vote">Stem</string>
    <string name="button_voted">Tak for din stemme</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_product_discount">Rabatkode</string>

    <!--Card Items -->
    <string name="product_title">Title</string>
    <string name="product_description">Secondary text</string>

    <!--Menu Items -->
    <string name="backdrop_news">Aktuelle Nyheder</string>
    <string name="backdrop_poll">Ugens Afstemning</string>
    <string name="backdrop_discounts">Loyalitetsfordele</string>
    <string name="backdrop_my_account">Min Konto</string>
    <string name="backdrop_start_contact">Startside / Kontakt</string>

    <!--Company info -->
    <string name="info_titel">Velkommen til</string>
    <string name="info_titel_desc">Vores kontaktinformationer</string>
    <string name="info_companyname">Dampbiksen</string>
    <string name="info_companyadress">6950 Ringkøbing</string>
    <string name="info_companycvr">CVR-nummer: 39154935</string>
    <string name="info_companyphone">Telefon-nr.: 29290743</string>
    <string name="info_companymail">E-mail : mail@dampbiksen.dk</string>
    

    <!--Firebase Items -->
    <string name="firebase_web_host" translatable="false">dampbiksen.firebaseapp.com</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="sign_in_cancelled">Sign-in Cancelled</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="unknown_error">Unknown Error</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1148480265315707</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1148480265315707</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="exception">Exception: %1$s</string>

</resources>
