<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentContactinfo">

    <LinearLayout
        style="@style/Widget.Shrine.Backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingBottom="100dp">

        <include layout="@layout/layout_util_backdrop"  />
    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar_contact"
            style="@style/Widget.Community.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/branded_menu"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            app:contentInsetStart="0dp"
            app:title="@string/title_app_bar_contact" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/presenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        android:background="@color/productGridBackgroundColor"
        android:elevation="8dp">

        <TextView
            android:id="@+id/info_titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:text="@string/info_titel"/>

        <ImageView
            android:id="@+id/contactlogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft= "15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/contactlogo"
            />

        <TextView
            android:id="@+id/info_titel_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:text="@string/info_titel_desc"/>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="?android:attr/colorPrimaryDark"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
        />

        <TextView
            android:id="@+id/info_companyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_companyname"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/info_companyadress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_companyadress"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/info_companycvr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_companycvr"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?attr/textAppearanceBody2" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="?android:attr/colorPrimaryDark"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/info_companyphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_companyphone"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/info_companymail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_companymail"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?attr/textAppearanceBody2" />

    </LinearLayout>


</FrameLayout>