<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Community.Title" />

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/product_card_image_height"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/product_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_description"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody2" />

            <android.support.design.button.MaterialButton
                android:id="@+id/button_vote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/button_vote"
                style="@style/Widget.Community.Button"/>

        </LinearLayout>
    </LinearLayout>
</android.support.design.card.MaterialCardView>
