<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".login.Login_Facebook_Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="24dp"
        android:paddingTop="16dp"
        android:id="@+id/main_ui_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Community.Title"
            />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:tint="?android:attr/textColorPrimary"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="92dp"
            android:text="@string/app_name_end"
            android:textAppearance="@style/TextAppearance.Community.Title"
            />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/textColorPrimary"
                android:textSize="18sp" />

            <com.facebook.login.widget.ProfilePictureView
                android:id="@+id/profilePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:gravity="center_horizontal"
                app:com_facebook_preset_size="normal" />

            <com.facebook.login.widget.LoginButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                app:com_facebook_confirm_logout="false"
                app:com_facebook_tooltip_mode="never_display" />

            <android.support.design.button.MaterialButton
                    android:id="@+id/fb_next_button"
                    style="@style/Widget.Community.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/button_next"
                    android:visibility="invisible" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>